trying some diff stuff with the home page

--- a/app/assets/stylesheets/admin/_admin-form.sass
+++ b/app/assets/stylesheets/admin/_admin-form.sass
@@ -17,7 +17,7 @@
 
     .hint
       text-align: right
-      font-size: var(--b5)
+      font-size: var(--t5)
       color: var(--grey)
 
     label
@@ -28,7 +28,7 @@
       background: var(--faint)
       border: 0
       padding: 0.25rem
-      font-size: var(--b3)
+      font-size: var(--t3)
       line-height: 1.4
       width: 100%
 
@@ -37,7 +37,7 @@
 
     textarea.article
       height: 80vh
-      font-size: var(--b3)
+      font-size: var(--t3)
       line-height: 1.5
       font-family: $serif
 
