--- a/app/assets/stylesheets/admin/_admin-header.sass
+++ b/app/assets/stylesheets/admin/_admin-header.sass
@@ -14,8 +14,8 @@
     display: block
     flex: 0
     padding: 0.5rem 1rem
-    width: 10rem
-    font-size: var(--b4)
+    width: 14rem
+    font-size: var(--t5)
     &:hover
       background-color: var(--blue)
       color: var(--default)
