--- a/app/assets/stylesheets/admin/_admin-list.sass
+++ b/app/assets/stylesheets/admin/_admin-list.sass
@@ -9,7 +9,7 @@
 
       code
         font-family: $sans
-        font-size: var(--b5)
+        font-size: var(--t5)
         line-height: 1.25
 
       figure.artwork.-small
