--- a/app/assets/stylesheets/admin/_admin-subheader.sass
+++ b/app/assets/stylesheets/admin/_admin-subheader.sass
@@ -13,7 +13,7 @@
     border-bottom: 1px solid var(--black)
 
     &.filters
-      font-size: var(--b4)
+      font-size: var(--t5)
       padding: 0.5rem 1rem
 
   .breadcrumbs
