--- a/app/assets/stylesheets/components/_box-form.sass
+++ b/app/assets/stylesheets/components/_box-form.sass
@@ -29,7 +29,7 @@
       position: absolute
       top: calc(var(--baseline)/2)
       right: var(--baseline)
-      font-size: var(--b5)
+      font-size: var(--t5)
       color: var(--grey)
 
     .error
@@ -39,7 +39,7 @@
       position: absolute
       top: calc(var(--baseline)/2)
       left: var(--baseline)
-      font-size: var(--b5)
+      font-size: var(--t5)
 
     [type='text'], [type='email'], [type='password'], textarea
       padding: calc(var(--baseline)*2.9) var(--baseline) calc(var(--baseline) * 1.25)
@@ -66,7 +66,7 @@
         position: relative
         top: 0
         left: 0
-        font-size: var(--b4)
+        font-size: var(--t5)
 
   .actions
     padding: var(--baseline)
