--- a/app/assets/stylesheets/components/_meta-nav.sass
+++ b/app/assets/stylesheets/components/_meta-nav.sass
@@ -1,6 +1,6 @@
 .meta-nav
   transition: top 2s ease
-  font-size: var(--b4)
+  font-size: var(--t4)
 
   .meta-nav_content
     display: flex
@@ -15,7 +15,7 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    padding: 0.625rem 1rem
+    padding: 0.75rem 1rem
     border-width: 0
     border-style: solid
     border-color: var(--black)
