--- a/app/assets/stylesheets/components/_plyr.sass
+++ b/app/assets/stylesheets/components/_plyr.sass
@@ -33,7 +33,7 @@
   padding: 0.75rem 1rem
   text-align: right
   font-family: $sans
-  font-size: var(--b4)
+  font-size: var(--t5)
   line-height: 1.4
   color: var(--grey)
   background: var(--default)
