--- a/app/assets/stylesheets/layouts/_fixed.sass
+++ b/app/assets/stylesheets/layouts/_fixed.sass
@@ -21,11 +21,11 @@
       flex: none
       width: 21rem
       border-top: 0
-      padding: calc(var(--gutter)/2) calc(var(--gutter)/2) 0 0
+      padding: 2rem 2rem 0 0
 
   @media screen and (min-width: $large)
     & > aside
-      padding: calc(var(--gutter)/2) var(--gutter) 0 0
+      padding: 2rem var(--gutter) 0 0
 
   @media screen and (min-width: $max)
     & > aside
