--- a/app/assets/stylesheets/modules/_variables.sass
+++ b/app/assets/stylesheets/modules/_variables.sass
@@ -10,16 +10,11 @@ $gutter: 4rem
 
 \:root
   // font sizes
-  --b1: 1.92rem
-  --b2: 1.6rem
-  --b3: 1.4rem
-  --b4: 1.2rem
-  --b5: 1.0rem
-  --b6: 0.8rem
-
-  --h1: 4.8rem
-  --h2: 3.04rem
-  --h3: 2.16rem
+  --t5: 1.4rem
+  --t4: 1.7rem
+  --t3: 2.2rem
+  --t2: 3.9rem
+  --t1: 6.0rem
 
   --max: 1500px
   --contained: 1740px
@@ -37,6 +32,7 @@ $gutter: 4rem
   --green: #A7FC04
   --yellow: #FCFC04
   --blue-dark: #2F00BF
+
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
   @media screen and (min-width: $large)
