--- a/app/assets/stylesheets/shared/_basics.sass
+++ b/app/assets/stylesheets/shared/_basics.sass
@@ -2,14 +2,13 @@ html
   font-size: 10px
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
-    font-size: 12.5px
   @media screen and (min-width: $large)
   @media screen and (min-width: $max)
 
 body
   border-top: 0.75rem solid var(--black)
   font-family: $sans
-  font-size: var(--b3)
+  font-size: var(--t4)
   line-height: calc(var(--baseline) * 2)
   background-color: var(--default)
 
@@ -36,14 +35,8 @@ a, a:link, a:visited
       cursor: default
       color: var(--grey)
 
-big
+h1, h2, h3, h4, h5, h6, big, strong, b
   font-weight: 600
-
-h4, h5
-  font-weight: 600
-
-  em
-    font-weight: 400
 
 code
   font-family: $sans
