--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -1,4 +1,6 @@
 .block
+  display: block
+
   &.-pull-up
     margin-top: -4rem
   &.-pull-down
@@ -16,7 +18,7 @@
     background-color: var(--default)
   &.-bg-faint
     color: var(--black)
-    background-color: var(--faint)
+    background-color: rgba(#ccc,0.175)
   &.-bg-image
     background-size: cover
     background-position: center
