--- a/app/assets/stylesheets/shared/_button.sass
+++ b/app/assets/stylesheets/shared/_button.sass
@@ -67,7 +67,7 @@
 
   &.-massive
     padding: 1.5rem 3rem
-    font-size: var(--b1)
+    font-size: var(--t2)
 
   &.-full
     display: block
@@ -99,6 +99,18 @@
     transition: 0.25s ease all
     &:hover
       color: var(--red)
+
+  &.-white
+    background: var(--white)
+    color: var(--black)
+    padding: 0.5rem 1rem
+    transition: 0.25s ease all
+    border-radius: 1.5px
+    box-shadow: 0 0.125rem 0.325rem rgba(#000,0.125)
+    transition: ease all 0.5s
+    &:hover
+      box-shadow: 0 0.125rem 0.125rem rgba(#000,0.5)
+      color: var(--blue)
 
 .text-button
   -webkit-appearance: none
