--- a/app/assets/stylesheets/shared/_header.sass
+++ b/app/assets/stylesheets/shared/_header.sass
@@ -1,7 +1,7 @@
 header.-issue
   .heading
     margin-bottom: var(--baseline)
-    font-size: var(--b1)
+    font-size: var(--t2)
     font-weight: 800
     font-family: $sans
 
@@ -9,7 +9,7 @@ header.-issue
   @media screen and (min-width: $medium)
     .heading
       padding-left: var(--gutter)
-      font-size: var(--h3)
+      font-size: var(--t2)
   @media screen and (min-width: $large)
 
 header.-modal
@@ -17,7 +17,7 @@ header.-modal
   .heading
     margin-left: var(--gutter)
     margin-bottom: 1rem
-    font-size: var(--h3)
+    font-size: var(--t2)
     line-height: 1.1
     font-weight: 800
     font-family: $sans
@@ -31,12 +31,12 @@ header.-box
   padding: 0.75rem 1rem 0.55rem
   .heading, .headline
     font-weight: 500
-    font-size: var(--b4)
+    font-size: var(--t5)
     &:before
       content: '■ '
   .meta
     font-weight: 500
-    font-size: var(--b4)
+    font-size: var(--t5)
     display: flex
     flex-direction: row
     justify-content: space-between
@@ -57,6 +57,6 @@ header.-box
     background-color: var(--black)
 
 nav.-box
-  font-size: var(--b4)
+  font-size: var(--t5)
   a, a:link, a:visited
     color: var(--grey)
