--- a/app/views/articles/excerpts/_tiny.html.haml
+++ b/app/views/articles/excerpts/_tiny.html.haml
@@ -1,25 +1,17 @@
 - cache [article, 'tiny'] do
-  = link_to article.path, class: ['excerpt', '-tiny'] do
-    .illustration
-      %figure.artwork
-        - if article.featured_artwork.image.present?
-          = image_tag article.featured_artwork.image.medium.url
+  .block
+    .block.-mb1
+      .block.-bb
+        .p.-t5= display_category(article.category)
 
-      .meta
-        .bylines
-          - article.authors.each do |author|
-            .byline #{ author.try(:full_name) }
-        .category #{ display_category(article.category) }
+    = link_to article.path do
+      .block.-mb1
+        %figure.artwork
+          - if article.featured_artwork.image.present?
+            = image_tag article.featured_artwork.image.large.url
 
-    .content
-      %header
-        %h3.headline= article.title
-
-      .more
-        .meta
-          .byline #{ article.authors.map(&:full_name).to_sentence }
-          .category #{ display_category(article.category) }
-
-        .text
-          :markdown
-            #{ raw article.excerpt }
+      .p.-centered
+        %h3.h.-h3= article.title
+        - if article.authors.any?
+          .block.-mt1
+            %p.p.-t5 by #{ article.authors.map(&:full_name).to_sentence }
