--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -6,8 +6,9 @@
   %header.page-header
     %h1.heading
       About us
-    %p.p.-b1
-      Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs. It is published online weekly (on Wednesday mornings) and in print monthly (mid month) from our office in Crumlin.
+    .p.-b2
+      :markdown
+        Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs.
 
   .block.-p2.-pb4
     .wrapper.-small{role: 'layout'}
