--- a/app/views/home/stockists.html.haml
+++ b/app/views/home/stockists.html.haml
@@ -4,8 +4,9 @@
 %header.page-header
   %h1.heading Stockists
 
-  %p.p.-b1
-    Our monthly print edition is stocked by these lovely folks around the city.
+  .p.-b2
+    :markdown
+      Our monthly print edition is stocked by these lovely folks around the city.
 
 .block.-pt2.-pb4
   .wrapper.-small{role: 'layout'}
