--- a/app/views/layouts/_content-nav.html.haml
+++ b/app/views/layouts/_content-nav.html.haml
@@ -16,4 +16,4 @@
       = link_to "Opinion", category_path('opinion')
   .right
     .links
-      = link_to "Past Issues", :issues
+      = link_to "Past issues", :issues
