--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -1,5 +1,5 @@
 %footer.primary-footer.block.-pb4
-  .block.-py4
+  .block.-py4.p.-t4
     .wrapper.-contained{role: 'layout'}
       .row
         .col-xs-12.col-md-3
@@ -24,6 +24,9 @@
               = link_to "Sean Finnan", "/contributors/sean-finnan"
               <br>
               = link_to "Erin McGuire", "/contributors/erin-mcguire"
+            %p
+              %big Web & strategy
+              Brian Flanagan
 
         .col-xs-12.col-md-3
           %section.section.-small
