--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -16,7 +16,7 @@ body
   color: var(--red)
   border: 1px solid var(--red)
   padding: 0.5rem 1rem
-  font-size: var(--b4)
+  font-size: var(--t5)
   line-height: 1.3
   transition: 0.25s ease all
 
