--- a/app/assets/stylesheets/components/_content-nav.sass
+++ b/app/assets/stylesheets/components/_content-nav.sass
@@ -2,7 +2,9 @@
   display: none
   flex-direction: row
   justify-content: space-between
-  padding: 0.5rem 0
+  padding: 0.25rem 0
+  font-size: var(--t4)
+  line-height: 1.4
 
   & > div
     flex-grow: 1
@@ -10,7 +12,9 @@
     &.left, &.right
       display: none
       flex-basis: 0
-      font-size: var(--b4)
+
+      a, a:link, a:visited, span
+        font-weight: 400
 
     &.left
       .links
@@ -22,8 +26,12 @@
 
   a, a:link, a:visited
     color: var(--black)
+    font-weight: 600
     &:hover
       color: var(--blue)
+
+  a, span
+    padding: 0.75rem 0
 
   .links
     display: flex
