--- a/app/assets/stylesheets/components/_primary-flag.sass
+++ b/app/assets/stylesheets/components/_primary-flag.sass
@@ -11,11 +11,14 @@
     margin: 1.25rem 0
     align-self: stretch
 
+    h5 + .list, h5 + form
+      margin-top: 0
+
   .flag
     position: relative
     justify-self: stretch
     text-align: center
-    padding-top: 0.5rem
+    padding-top: 1.25rem
 
     .strapline
       display: none
@@ -24,14 +27,14 @@
       position: absolute
       left: 0
       right: 0
-      top: -3.175rem
+      top: -2.75rem
       span
         margin: 0 0.075rem
         padding: 0 0.25rem
         background-color: var(--default)
         line-height: calc(var(--baseline) * 1.5)
         font-weight: 400
-        font-size: var(--b4)
+        font-size: var(--t5)
 
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
@@ -41,7 +44,7 @@
 
     .ear
       display: block
-      width: 20rem
+      width: 24rem
     .flag
       .strapline
         display: block
