--- a/app/assets/stylesheets/components/_sidebar.sass
+++ b/app/assets/stylesheets/components/_sidebar.sass
@@ -1,7 +1,7 @@
 .sidebar
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
-    font-size: var(--b4)
+    font-size: var(--t5)
     line-height: 1.25
     position: relative
     display: flex
