--- a/app/assets/stylesheets/shared/_artwork.sass
+++ b/app/assets/stylesheets/shared/_artwork.sass
@@ -1,11 +1,11 @@
 .artwork
+  width: 100%
   display: block
   margin: 0
-  padding: 0
 
-  img
-    display: block
+  & > img
     width: 100%
     height: auto
+    display: block
     margin: 0
     padding: 0
