--- a/app/assets/stylesheets/shared/_list.sass
+++ b/app/assets/stylesheets/shared/_list.sass
@@ -36,7 +36,7 @@
         position: absolute
         top: calc(var(--baseline)/2)
         left: var(--baseline)
-        font-size: var(--b5)
+        font-size: var(--t5)
 
   &.-articles
     font-family: $serif
