--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -1,157 +1,72 @@
-.text
-  strong
+.c
+  &.-w3
+    font-weight: 300
+  &.-w4
+    font-weight: 400
+  &.-w5
+    font-weight: 500
+  &.-w6
     font-weight: 600
+  &.-w8
+    font-weight: 800
 
-  h5 + p
-    margin-top: 0.5rem
+  &.-serif
+    font-family: $serif
 
-  h5
-    font-weight: 600
+  &.-grey
+    color: var(--grey)
 
-  p, ul, ol, blockquote
-    margin: var(--baseline) 0
-
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
-  a, a:link, a:visited
-    color: var(--black)
-    border-bottom: 1px solid var(--blue)
+.a
+  &.-elsewhere
+    &:after
+      font-weight: 400
+      content: " \2192"
+      opacity: 0
+      margin-left: -0.5rem
+      transition: 0.25s all ease
     &:hover
-      border-bottom-color: transparent
-      color: var(--blue)
+      &:after
+        opacity: 1
+        margin-left: 0
 
-  form
-    margin: calc(var(--baseline)/2) 0 var(--baseline)
+.p
+  // font size
+  &.-t1
+    font-size: var(--t1)
+    line-height: 1.0
+  &.-t2
+    font-size: var(--t2)
+    line-height: 1
+  &.-t3
+    font-size: var(--t3)
+    line-height: 1.4
+  &.-t4
+    font-size: var(--t4)
+    line-height: 1.4
+  &.-t5
+    font-size: var(--t5)
+    line-height: 1.4
 
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
+  // alignment
   &.-centered
     text-align: center
 
-.text.-article
-  font-size: var(--b2)
-  line-height: calc(1.5 * var(--b2)) // 2.4rem
-  font-family: $serif
-  strong
-    font-family: $sans
-    font-size: 1.1em
+.h
+  // font size
+  &.-h1
+    font-size: var(--t1)
+    line-height: 1.0
+    font-weight: 800
+  &.-h2
+    font-size: var(--t2)
+    letter-spacing: -0.05em
+    line-height: 1
+    font-weight: 800
+  &.-h3
+    font-size: var(--t3)
+    line-height: 1.1
+    font-weight: 800
 
-.text.-small
-  font-size: var(--b4)
-  line-height: 1.4
-
-  p, ul, ol, blockquote
-    margin: calc(var(--baseline)/2) 0
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
-  form
-    margin: calc(var(--baseline)/4) 0 var(--baseline)
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
-  &.-fancy
-    font-family: $serif
-    font-size: var(--h3)
-    line-height: 1.4
+  // alignment
+  &.-centered
     text-align: center
-
-    @media screen and (min-width: $small)
-    @media screen and (min-width: $medium)
-    @media screen and (min-width: $large)
-      font-size: var(--h2)
-
-.text.-tiny
-  font-size: var(--b5)
-  line-height: 1.25
-
-  p, ul, ol, blockquote
-    margin: calc(var(--baseline)/2) 0
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
-  form
-    margin: calc(var(--baseline)/4) 0 var(--baseline)
-    &:first-child
-      margin-top: 0
-    &:last-child
-      margin-bottom: 0
-
-.c.-grey
-  color: var(--grey)
-
-.h.-h1
-  font-size: var(--h1)
-  letter-spacing: -0.025em
-  line-height: 1.1
-  font-weight: 300
-  margin-bottom: var(--baseline)
-.h.-h2
-  font-size: var(--h2)
-  letter-spacing: -0.025em
-  line-height: 1.2
-  font-weight: 300
-  margin-bottom: var(--baseline)
-.h.-h3
-  font-size: var(--b1)
-  line-height: 1.3
-  font-weight: 800
-  margin-bottom: var(--baseline)
-
-.p.-serif
-  font-family: $serif
-
-.p.-scale
-  font-size: var(--b2)
-  line-height: calc(1.5 * var(--b2)) // 2.4rem
-  h3
-    font-weight: 600
-  @media screen and (min-width: $small)
-  @media screen and (min-width: $medium)
-    font-size: 1.6vw
-    line-height: 1.4
-
-.p
-  &.-b1
-    font-size: var(--b1)
-    line-height: 1.4
-  &.-b2
-    font-size: var(--b2)
-    line-height: 1.4
-  &.-b3
-    font-size: var(--b3)
-    line-height: 1.4
-  &.-b4
-    font-size: var(--b4)
-    line-height: 1.4
-  &.-b5
-    font-size: var(--b5)
-    line-height: 1.4
-
-.p.-category
-  font-weight: 400
-  text-align: left
-  a, a:link, a:visited
-    color: var(--black)
-    background-color: var(--default)
-    border: 1px solid var(--black)
-    display: inline-block
-    font-size: var(--b4)
-    line-height: 1.4em
-    padding: 0.25rem 0.5rem 0.175rem
-    &:hover
-      color: var(--blue)
-      background-color: var(--default)
-      border-color: var(--blue)
