--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -5,13 +5,22 @@
 
 %header.page-header
   %h1.heading Contact us
-  %p.p.-b1
-    We love tips, complaints, corrections, and compliments. You can always reach us by email at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>, but if you’re looking for something more secure – <em>although nothing is 100 percent</em> – then, here are some other options.
+  .p.-b2
+    :markdown
+      We love tips, complaints, corrections, and compliments.
 
 .block.-p2.-pb4
   .wrapper.-small{role: 'layout'}
     .article
       :markdown
+        #### Email
+
+        You can always reach us by email. We take privacy very seriously, but email doesn't, so if you need to send us something sensitive we'd recommend other methods.
+
+        Email us:
+
+        `info@dublininquirer.com`
+
         #### WhatsApp
 
         You can download the free messaging app onto your mobile phone to send and receive messages with full end-to-end encryption. WhatsApp, which is owned by Facebook, does store some records, including phone numbers used in exchanges, users’ metadata and timestamps.
