--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -12,23 +12,17 @@
         %main
           .row
             - if @articles.any?
-              .col-xs-12.col-lg-8
+              .col-xs-12
                 - @articles.first(1).each_with_index do |article, i|
                   = render partial: 'articles/excerpts/half', locals: {article: article, odd: i.odd?}
-              .col-xs-12.col-lg-4
-                - @articles.first(2).drop(1).each do |article|
-                  = render partial: 'articles/excerpts/small', locals: {article: article}
-
-                .hidden.lg-show= render partial: 'home/tiny-box', locals: {articles: @articles}
-
           .row
             - if @articles.any?
               - cache ['home', 'secondary', @articles] do
-                - @articles.drop(2).each do |article|
-                  .col-xs-12.col-lg-6
-                    = render partial: 'articles/excerpts/half', locals: {article: article}
+                - @articles.drop(1).each do |article|
+                  .col-xs-12.col-lg-4
+                    = render partial: 'articles/excerpts/small', locals: {article: article}
 
-                .col-xs-12.col-lg-6
+                .col-xs-12.col-lg-4
                   - if @cover
                     = render partial: 'articles/excerpts/cover', locals: {article: @cover}
 
