thinking about articles again

--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -50,11 +50,16 @@
   // alignment
   &.-centered
     text-align: center
+  &.-left
+    text-align: left
+  &.-right
+    text-align: right
 
 .h
   // font size
   &.-h1
     font-size: var(--t1)
+    letter-spacing: -0.05em
     line-height: 1.0
     font-weight: 800
   &.-h2
@@ -70,3 +75,7 @@
   // alignment
   &.-centered
     text-align: center
+  &.-left
+    text-align: left
+  &.-right
+    text-align: right
