--- a/app/views/articles/_meta.html.haml
+++ b/app/views/articles/_meta.html.haml
@@ -1,13 +1,15 @@
-.meta
-  .byline= raw article.authors.map { |author| link_to(author.full_name, author) }.to_sentence
+.wrapper.-medium{role: 'layout'}
+  .block.-by.-py1.-my2
+    .row
+      .col-xs-12.col-lg-6
+        - if article.issue_date.present?
+          .date
+            #{ link_to article.issue_date.strftime('%e %B %Y'), article.issue }
 
-  - if article.issue_date.present?
-    .date
-      #{ link_to article.issue_date.strftime('%e %B %Y'), article.issue }
-
-.share
-  %ul.list.-nav
-    %li= link_to "Facebook", "http://www.facebook.com/share.php?u=#{ "https://www.dublininquirer.com#{ article.path }" }"
-    %li= link_to "Twitter", "https://twitter.com/intent/tweet?text=#{ article.title }&url=#{ "https://www.dublininquirer.com#{ article.path }" }"
-    - if article.commentable?
-      %li= link_to "Respond", "#comments", 'data-behaviour': 'scroll'
+      .col-xs-12.col-lg-6
+        .p.-right
+          %ul.list.-nav
+            %li= link_to "Facebook", "http://www.facebook.com/share.php?u=#{ "https://www.dublininquirer.com#{ article.path }" }"
+            %li= link_to "Twitter", "https://twitter.com/intent/tweet?text=#{ article.title }&url=#{ "https://www.dublininquirer.com#{ article.path }" }"
+            - if article.commentable?
+              %li= link_to "Respond", "#comments", 'data-behaviour': 'scroll'
