mucho rejigerring to incorporate a better type scale

--- a/app/assets/stylesheets/components/_hr.sass
+++ b/app/assets/stylesheets/components/_hr.sass
@@ -4,7 +4,7 @@ hr.-stroke
   border-width: 0.5px 0
   margin: 0
 
-.col.flex > hr.-stroke
+.flex > hr.-stroke
   position: absolute
   left: calc(var(--gutter)/2)
   right: calc(var(--gutter)/2)
