--- a/app/assets/stylesheets/components/_page-header.sass
+++ b/app/assets/stylesheets/components/_page-header.sass
@@ -1,32 +1,20 @@
 .page-header
-  padding: 2.25rem 0 1.75rem
+  padding: 5rem 0 4rem
   position: relative
   text-align: center
-
-  .heading
-    font-size: var(--t2)
-    letter-spacing: -0.05em
-    line-height: 1.1
-    font-weight: 800
-    margin-bottom: var(--baseline)
-
-    code.-quote
-      font-weight: 800
 
   .illustration
     display: none
 
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
-    padding: 3.5rem calc(50% - 16rem) 1.75rem
-
-    .heading
+    padding: 7.5rem calc(50% - 36rem) 6.75rem
 
     .illustration
       display: block
       width: 16rem
       height: 16rem
-      margin: 1rem auto
+      margin: 0 auto
       img
         width: 100%
         height: 100%
