--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -1,3 +1,9 @@
+.inline-block
+  display: inline-block
+
+.inline
+  display: inline
+
 .block
   display: block
 
@@ -241,7 +247,6 @@
 
 .flex
   display: flex
-  flex: 1
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
     &.-cy
