--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -2,7 +2,7 @@
 - description "Articles in the #{ display_category(@category) } category."
 
 %header.page-header
-  %h1.heading= display_category(@category)
+  %h1.h.-h2= display_category(@category)
 
 .block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
