--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -4,8 +4,8 @@
 
 
 %header.page-header
-  %h1.heading Contact us
-  .p.-b2
+  %h1.h.-h2 Contact us
+  .block.-mt1.p.-t3
     :markdown
       We love tips, complaints, corrections, and compliments.
 
