--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -12,19 +12,30 @@
         %main
           .row
             - if @articles.any?
-              .col-xs-12
-                - @articles.first(1).each_with_index do |article, i|
-                  = render partial: 'articles/excerpts/half', locals: {article: article, odd: i.odd?}
+              .col-xs-12.col-lg-8.flex
+                - @articles.first(1).each do |article|
+                  = render partial: 'articles/excerpts/half', locals: {article: article}
+                %hr.-stroke
+              .col-xs-12.col-lg-4.flex
+                .block
+                  - @articles.first(2).drop(1).each do |article|
+                    = render partial: 'articles/excerpts/small', locals: {article: article}
+                  .block.-b.-p1
+                    .p.-t5
+                      :markdown
+                        Also this week:
           .row
             - if @articles.any?
               - cache ['home', 'secondary', @articles] do
-                - @articles.drop(1).each do |article|
-                  .col-xs-12.col-lg-6
-                    = render partial: 'articles/excerpts/small', locals: {article: article}
+                - @articles.drop(2).each do |article|
+                  .col-xs-12.col-lg-6.flex
+                    = render partial: 'articles/excerpts/half', locals: {article: article}
+                    %hr.-stroke
 
-                .col-xs-12.col-lg-6
-                  - if @cover
+                - if @cover
+                  .col-xs-12.col-lg-6
                     = render partial: 'articles/excerpts/cover', locals: {article: @cover}
+                    %hr.-stroke
 
         %aside.sidebar
           = render partial: 'home/sidebar'
