--- a/app/views/home/stockists.html.haml
+++ b/app/views/home/stockists.html.haml
@@ -4,7 +4,7 @@
 %header.page-header
   %h1.heading Stockists
 
-  .p.-b2
+  .block.-mt1.p.-t3
     :markdown
       Our monthly print edition is stocked by these lovely folks around the city.
 
