--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -2,7 +2,7 @@
   .text.-centered
     %h1.h.-h2 Help our reporters<br>cover the important stories.
 
-    %p.p.-b2 Subscribe now and get your first month free.
+    %p.p.-t3 Subscribe now and get your first month free.
 
   .block.-mt4.-pull-down
     .wrapper.-medium{role: 'layout'}
