--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -2,9 +2,9 @@
 - description "Dublin Inquirer articles related to #{ @tag.name } "
 
 %header.page-header
-  %h1.heading
+  %h1.h.-h2
     Articles related to
-    %code.-quote #{ @tag.name }
+    %code.code.-quote #{ @tag.name }
 
 .block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
