--- a/app/assets/stylesheets/components/_logo.sass
+++ b/app/assets/stylesheets/components/_logo.sass
@@ -12,12 +12,12 @@
     display: block
     object-fit: contain
     width: 100%
-    height: 100%
+    height: calc(100% - 2px)
 
   &.-small
-    height: 2rem
-    width: calc(2rem * (26.2/3))
-    background-size: auto 2rem
+    height: 2.5rem
+    width: calc(2.5rem * (26.2/3))
+    background-size: auto 2.5rem
 
   &.-medium
     height: 1.875rem
@@ -25,9 +25,9 @@
     background-size: auto 1.875rem
 
   &.-large
-    height: 3.75rem
-    width: calc(3.75rem * (26.2/3))
-    background-size: auto 3.675rem
+    height: 4.125rem
+    width: calc(4.125rem * (26.2/3))
+    background-size: auto 4.125rem
 
   &.-stacked
     height: 7rem
