--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -29,6 +29,16 @@
         opacity: 1
         margin-left: 0
 
+.code
+  font-family: $sans
+  background: var(--faint)
+
+  &.-quote
+    &:before
+      content: '‘'
+    &:after
+      content: '’'
+
 .p
   // font size
   &.-t1
@@ -36,16 +46,35 @@
     line-height: 1.0
   &.-t2
     font-size: var(--t2)
-    line-height: 1
+    line-height: 1.2
+    &.-serif
+      font-size: calc(var(--t2) * 0.869)
+      line-height: calc(var(--t2) * 1.4)
+      font-family: $serif
   &.-t3
     font-size: var(--t3)
     line-height: 1.4
+    &.-serif
+      font-size: calc(var(--t3) * 0.869)
+      line-height: calc(var(--t3) * 1.4)
+      font-family: $serif
   &.-t4
     font-size: var(--t4)
     line-height: 1.4
+    &.-serif
+      font-size: calc(var(--t4) * 0.869)
+      line-height: calc(var(--t4) * 1.4)
+      font-family: $serif
   &.-t5
     font-size: var(--t5)
     line-height: 1.4
+    &.-serif
+      font-size: calc(var(--t5) * 0.869)
+      line-height: calc(var(--t5) * 1.4)
+      font-family: $serif
+
+  &.-serif
+    font-family: $serif
 
   // alignment
   &.-centered
@@ -59,12 +88,12 @@
   // font size
   &.-h1
     font-size: var(--t1)
-    letter-spacing: -0.05em
+    letter-spacing: -0.0325em
     line-height: 1.0
     font-weight: 800
   &.-h2
     font-size: var(--t2)
-    letter-spacing: -0.05em
+    letter-spacing: -0.0325em
     line-height: 1
     font-weight: 800
   &.-h3
