--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -4,30 +4,68 @@
 
 - cache ['imprint', 'v1'] do
   %header.page-header
-    %h1.heading
-      About us
-    .p.-b2
-      :markdown
-        Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs.
+    %h1.h.-h2 Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs.
 
   .block.-p2.-pb4
     .wrapper.-small{role: 'layout'}
       %header.header.-modal
-        %h2.heading Staff
+        %h3.h.-h3 Staff
 
       - @staff.each do |staff|
-        = render partial: 'authors/staff', locals: {staff: staff}
+        .block.-my2
+          .details
+            .portrait
+              - if staff[:author].portrait.present?
+                = image_tag staff[:author].portrait.url
+
+            .bio.text
+              :markdown
+                #{ staff[:author].full_name }, #{ staff[:title] }
+
+                #{ raw staff[:author].bio }
+
+              - if staff[:author].articles.published.any?
+                :markdown
+                  _#{ link_to raw("Articles by #{ staff[:author].full_name } &rarr;"), staff[:author] }_
 
       %header.header.-modal
-        %h2.heading Columnists
+        %h3.h.-h3 Columnists
 
       - @columnists.each do |author|
-        = render partial: 'authors/author', locals: {author: author}
+        .block.-my2
+          .details
+            .portrait
+              - if author.portrait.present?
+                = image_tag author.portrait.url
+
+            .bio.text
+              :markdown
+                #{ author.full_name }
+
+                #{ raw author.bio }
+
+              - if author.articles.published.any?
+                :markdown
+                  _#{ link_to raw("Articles by #{ author.full_name } &rarr;"), author }_
 
       %header.header.-modal
-        %h2.heading Regular contributors
+        %h3.h.-h3 Regular contributors
 
       - @contributors.each do |author|
-        = render partial: 'authors/author', locals: {author: author}
+        .block.-my2
+          .details
+            .portrait
+              - if author.portrait.present?
+                = image_tag author.portrait.url
+
+            .bio.text
+              :markdown
+                #{ author.full_name }
+
+                #{ raw author.bio }
+
+              - if author.articles.published.any?
+                :markdown
+                  _#{ link_to raw("Articles by #{ author.full_name } &rarr;"), author }_
 
 = render partial: 'products/enticement'
