--- a/app/views/layouts/_primary-flag.html.haml
+++ b/app/views/layouts/_primary-flag.html.haml
@@ -4,7 +4,7 @@
   .block
     .flag-ears
       .ear
-        .block.-bg-faint.-py1
+        .block.-bg-faint.-b.-py1
           .p.-t5.-centered
             %h5 Follow us on
             %ul.list.-nav
@@ -21,7 +21,7 @@
           %span Different
 
       .ear
-        .block.-bg-faint.-py1
+        .block.-bg-faint.-b.-py1
           .p.-t5.-centered
             %h5 Get our weekly newsletter
             %form.tiny-form{action: "https://tinyletter.com/DublinInquirer", method: "post", onsubmit: "window.open('https://tinyletter.com/DublinInquirer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true", target: "popupwindow"}
