--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -3,7 +3,7 @@
     .wrapper.-contained{role: 'layout'}
       .row
         .col-xs-12.col-md-3
-          .section.-small
+          .block.-mb4
             = link_to :root do
               .logotype.-medium
                 = render partial: 'layouts/images/logo-horizontal'
@@ -12,24 +12,24 @@
                 Dublin Inquirer is an independent, reader-supported newspaper serving Ireland's capital.
 
         .col-xs-12.col-md-3.col-md-offset-3
-          %section.section.-small
+          .block.-mb4
             %p
-              %big Managing editor
+              %big.c.-serif Managing editor
               = link_to "Lois Kaplia", "/contributors/lois-kapila"
             %p
-              %big Deputy editor
+              %big.c.-serif Deputy editor
               = link_to "Sam Tranum", "/contributors/sam-tranum"
             %p
-              %big City reporters
+              %big.c.-serif City reporters
               = link_to "Sean Finnan", "/contributors/sean-finnan"
               <br>
               = link_to "Erin McGuire", "/contributors/erin-mcguire"
             %p
-              %big Web & strategy
+              %big.c.-serif Web & strategy
               Brian Flanagan
 
         .col-xs-12.col-md-3
-          %section.section.-small
+          .block.-mb4
             :markdown
               &copy; 2015&ndash;#{ Date.current.year }
 
